--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bootstrap": "^4.5.0",
     "emotion-theming": "^10.0.27",
     "jquery": "^3.5.1",
+    "my-design-app": "^0.1.0",
     "popper.js": "^1.16.1",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
